Add tests and smaller improvements

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "lib": ["ES2019", "DOM"],
+  "types": ["node"],
     "declaration": true,
     "declarationDir": "dist/types",
     "outDir": "dist",
