--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build
+        run: npm run build
+
+      - name: Patch example import map for Pages
+        run: |
+          sed -i 's|https://unpkg.com/openlayers-prefetching/dist/PrefetchManager.esm.js|../../dist/PrefetchManager.esm.js|g' examples/advanced/advanced.html
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
