--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openlayers-prefetching",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Prefetching Manager for OpenLayers - An extension to optimize tile loading",
   "main": "dist/PrefetchManager.js",
   "module": "dist/PrefetchManager.esm.js",
@@ -21,6 +21,8 @@
     "build": "rollup -c rollup.config.js",
     "dev": "rollup -c rollup.config.js -w",
     "prepublishOnly": "npm run build",
+  "test": "tsx tests/priority-order.test.ts",
+    "test:e2e": "npm run build && playwright test",
     "serve": "npx http-server . -p 8080"
   },
   "publishConfig": {
@@ -40,15 +42,16 @@
     "ol": "^7.0.0 || ^8.0.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.41.2",
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/node": "^20.11.30",
     "ol": "^8.0.0",
     "rollup": "^3.0.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.7.1",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
-  },
-  "dependencies": {
-    "openlayers-prefetching": "^0.1.0"
   }
 }
